--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase": "^4.6.1",
     "ionic-angular": "3.8.0",
     "ionicons": "3.0.0",
+    "moment": "^2.19.1",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
